# windows_matrix_player

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  TODO.md  build.bat
docs/: ref_eq_pipeline.md
fonts/: cmu_serif.xml
src/: app.rc  art_window.cpp  art_window.h  artwork.cpp  artwork.h  audio_output.h  db.cpp  db.h  decoder.cpp  decoder.h  eq_manager.cpp  eq_manager.h  eq_profiles.cpp  eq_profiles.h  icons.cpp  icons.h  library.cpp  library.h  log_util.h  main.cpp  player_window.cpp  player_window.h  wasapi_output.cpp  wasapi_output.h
tools/: ab_test.cpp
